correção de erros apontados pelo Sonar