@@ -8,7 +8,6 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -22,6 +21,6 @@ public class ListarPedidos implements ListarPedidosUC {
 
         return pedidos.stream()
                 .map(PedidoResponseDTO::converterParaDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
