@@ -1,8 +1,8 @@
 package br.com.lanchonete.autoatendimento.aplicacao.casosdeuso.produto;
 
 import br.com.lanchonete.autoatendimento.aplicacao.dto.ProdutoResponseDTO;
-import br.com.lanchonete.autoatendimento.aplicacao.portas.entrada.produto.BuscarProdutosPorCategoriaUC;
 import br.com.lanchonete.autoatendimento.aplicacao.excecao.ValidacaoException;
+import br.com.lanchonete.autoatendimento.aplicacao.portas.entrada.produto.BuscarProdutosPorCategoriaUC;
 import br.com.lanchonete.autoatendimento.aplicacao.portas.saida.ProdutoRepositorio;
 import br.com.lanchonete.autoatendimento.dominio.modelo.Categoria;
 import br.com.lanchonete.autoatendimento.dominio.modelo.Produto;
@@ -10,7 +10,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 @Service
 @RequiredArgsConstructor
@@ -26,9 +26,10 @@ public class BuscarProdutosPorCategoria implements BuscarProdutosPorCategoriaUC 
 
         final List<Produto> produtos = produtoRepositorio.buscarPorCategoria(categoria);
 
-        return produtos.stream()
+        return Stream.of(produtos)
+                .flatMap(List::stream)
                 .map(ProdutoResponseDTO::converterParaDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
